kubernetes/TP-Vote-K8S/k8s/networkpolicies/policy-postgres.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy-postgres
  namespace: tp-kubernetes
spec:
  podSelector:
    matchLabels:
      role: postgres
  policyTypes:
    - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role-db: client-postgres
    ports:
      - protocol: TCP
        port: 5432
